--- a/Passport/Base.lproj/Main.storyboard
+++ b/Passport/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7IR-nw-3gM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dcq-l9-9gd">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -68,7 +68,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Emd-ec-g3X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2682.4000000000001" y="1097.9010494752624"/>
+            <point key="canvasLocation" x="3621.5999999999999" y="1097.9010494752624"/>
         </scene>
         <!--Custom Tab Bar View Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -135,13 +135,32 @@
                     <view key="view" contentMode="scaleToFill" id="W6R-vE-yg5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7bV-wo-94N">
+                                <rect key="frame" x="170" y="521" width="34" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Start"/>
+                                <connections>
+                                    <action selector="startScan:" destination="7IR-nw-3gM" eventType="touchUpInside" id="f1R-6b-cGz"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OEc-5g-tYZ">
+                                <rect key="frame" x="108" y="470" width="158" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Connect Keep Account"/>
+                                <connections>
+                                    <action selector="connectKeep:" destination="7IR-nw-3gM" eventType="touchUpInside" id="EuL-DY-G0X"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Wkr-jp-max"/>
                     </view>
+                    <navigationItem key="navigationItem" id="lrp-zS-L8N"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2dA-6b-LXu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137" y="1541"/>
+            <point key="canvasLocation" x="1076" y="1540.4797601199402"/>
         </scene>
         <!--Group-->
         <scene sceneID="J1e-cM-cv9">
@@ -157,7 +176,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5mE-2d-634" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1741.5999999999999" y="1097.9010494752624"/>
+            <point key="canvasLocation" x="2680.8000000000002" y="1097.9010494752624"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="uXp-rZ-3FB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dcq-l9-9gd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2yQ-fc-r2y">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="7IR-nw-3gM" kind="relationship" relationship="rootViewController" id="AYB-sM-YqA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wMX-JS-YkM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="1540.4797601199402"/>
         </scene>
     </scenes>
     <resources>
