--- a/Passport/Base.lproj/Main.storyboard
+++ b/Passport/Base.lproj/Main.storyboard
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.30.1" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dcq-l9-9gd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dcq-l9-9gd">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.19.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--First View Controller-->
+        <!--Stats View Controller-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModule="Passport" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" customClass="StatsViewController" customModule="Passport" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -95,7 +95,7 @@
         <scene sceneID="hCr-mR-06m">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PLC-kP-UrT" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Stats" image="first" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="Stats" image="ic_tab_stats_disabled" selectedImage="ic_tab_stats" id="acW-dT-cKf"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FWv-DO-EfN">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -114,7 +114,7 @@
         <scene sceneID="E3C-1q-6jg">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GLR-JH-Imy" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Trips" image="second" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="Trips" image="ic_tab_trips_disabled" selectedImage="ic_tab_trips" id="cPa-gy-q4n"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3bi-do-wx4">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -149,7 +149,7 @@
         <scene sceneID="J1e-cM-cv9">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aky-fW-ZzL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Group" id="yZF-9g-0zT"/>
+                    <tabBarItem key="tabBarItem" title="Group" image="ic_tab_group_disabled" selectedImage="ic_tab_group" id="yZF-9g-0zT"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cyD-pB-8p7">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -223,7 +223,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
+        <image name="ic_tab_group" width="24" height="24"/>
+        <image name="ic_tab_group_disabled" width="24" height="24"/>
+        <image name="ic_tab_stats" width="24" height="24"/>
+        <image name="ic_tab_stats_disabled" width="24" height="24"/>
+        <image name="ic_tab_trips" width="24" height="24"/>
+        <image name="ic_tab_trips_disabled" width="24" height="24"/>
     </resources>
 </document>
